--- a/index.html
+++ b/index.html
@@ -28,5 +28,13 @@
       <div class="cuadrado2">#808080</div>
       <div class="cuadrado3">#000000</div>
     </div>
+
+    <div>https://sebkay.com/</div>
+
+    <div class="cuadrado">
+      <div class="cuadrado4">#F1F8FA</div>
+      <div class="cuadrado5">#808080</div>
+      <div class="cuadrado6">#000000</div>
+    </div>
   </body>
 </html>
