--- a/index.html
+++ b/index.html
@@ -21,20 +21,34 @@
     </div>
     <h3>Task Two:</h3>
 
+    <!-- 1 -->
     <div>https://timmyomahony.com</div>
 
     <div class="cuadrado">
-      <div class="cuadrado1">#F0F0E8</div>
-      <div class="cuadrado2">#808080</div>
-      <div class="cuadrado3">#000000</div>
+      <span class="cuadrado1">#F0F0E8</span>
+      <span class="cuadrado2">#808080</span>
+      <span class="cuadrado3">#000000</span>
     </div>
-
     <div>https://sebkay.com/</div>
+    <div class="cuadrado">
+      <span class="cuadrado4">#F1F8FA</span>
+      <span class="cuadrado5">#808080</span>
+      <span class="cuadrado6">#000000</span>
+    </div>
+    <div>https://jonny.me/</div>
 
     <div class="cuadrado">
-      <div class="cuadrado4">#F1F8FA</div>
-      <div class="cuadrado5">#808080</div>
-      <div class="cuadrado6">#000000</div>
+      <span class="cuadrado7">#452BC7</span>
+      <span class="cuadrado8">#FFCD00</span>
+      <span class="cuadrado9">#000000</span>
+    </div>
+
+    <div>https://jacekjeznach.com/</div>
+
+    <div class="cuadrado">
+      <span class="cuadrado10"> #01ffe9</span>
+      <span class="cuadrado11"> #4b4a4a</span>
+      <span class="cuadrado12">#000000</span>
     </div>
   </body>
 </html>
