--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
       </div>
       <div class="codepen">
         <!-- with Figma -->
-        <img src="/images/M1C2 UI_UX Assignment Abdelhaq (2).png" alt="" />
+        <img src="/images/M1C2 UI_UX Assignment Abdelhaq (3).png" alt="" />
       </div>
     </div>
+
+    <!-- Task Two -->
     <h3>Task Two:</h3>
 
     <!-- 1 -->
@@ -52,6 +54,15 @@
       <span class="cuadrado10"> #01ffe9</span>
       <span class="cuadrado11"> #4b4a4a</span>
       <span class="cuadrado12">#000000</span>
+    </div>
+
+    <!-- Task Three -->
+    <h3>Task Three: User Story Facebook</h3>
+    <div class="low-Fidelity">
+      <div class="User Story">
+        <!-- with Figma -->
+        <img src="/images/User Story Facebook Abdelhaq.png" alt="" />
+      </div>
     </div>
   </body>
 </html>
