--- a/index.html
+++ b/index.html
@@ -56,13 +56,21 @@
       <span class="cuadrado12">#000000</span>
     </div>
 
-    <!-- Task Three -->
+    <!-- Task Three: -->
     <h3>Task Three: User Story Facebook</h3>
-    <div class="low-Fidelity">
-      <div class="User Story">
+    <div class="User Story">
+      <div class="face">
         <!-- with Figma -->
         <img src="/images/User Story Facebook Abdelhaq.png" alt="" />
       </div>
     </div>
+
+    <!-- Task  Four: -->
+    <h3>Task Four: Identify the prime objective of Facebook</h3>
+
+    <p>
+      People can connect and to share the information they wanted and having
+      access to the information they wanted
+    </p>
   </body>
 </html>
