--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     <h3>Task Four: Identify the prime objective of Facebook</h3>
 
     <p>
-      People can connect and to share the information they wanted and having
-      access to the information they wanted
+      <strong>People can connect and to share the information</strong>they
+      wanted and having access to the information they wanted
     </p>
   </body>
 </html>
