--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="codepen">
         <!-- with Figma -->
-        <img src="/images/M1C2 UI_UX Assignment Abdelhaq (3).png" alt="" />
+        <img src="/images/UXAssignmentAbdelhaqSin (1).png" alt="" />
       </div>
     </div>
 
